--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".ui.skeleton.SkeletonActivity" />
         <activity android:name=".ui.skeleton.SkeletonDetailActivity" />
         <activity android:name=".ui.floatnode.FloatNodeActivity" />
+        <activity android:name=".ui.progressbar.RingProgressBarActivity" />
 
     </application>
 
