--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".ui.skeleton.SkeletonDetailActivity" />
         <activity android:name=".ui.floatnode.FloatNodeActivity" />
         <activity android:name=".ui.progressbar.RingProgressBarActivity" />
+        <activity android:name=".ui.blurdialog.BlurDialogActivity" />
 
     </application>
 
